implemented alembic, basic functionality working

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,13 @@
 <html>
 <h1><center>Hello there</h1></center>
 <br>
-{{name}}
+
+{{output}}
+<br>
+<form method="POST" action="">
+<input type="text" name="command" id="command"></input>
+</form>
+
 {% extends 'base.html' %}
 
 {% block content %}
