--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,10 @@
 <h1><center>Game</h1></center>
 <br>
 
-{{output}}
+{% for message in output %}
+{{message}}
+<br>
+{% endfor %}
 <br>
 <form method="POST" action="">
 <input type="text" name="command" id="command"></input>
