Fixed movement and messages

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,10 @@
 <br>
 
 {% for message in output %}
+{% autoescape false %}
 {{message}}
 <br>
+{% endautoescape %}
 {% endfor %}
 <br>
 <form method="POST" action="">
